--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
+    "@tailwindcss/forms": "^0.5.6",
     "next": "^12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -21,6 +23,7 @@
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.0",
     "postcss": "^8.4.31",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3.3.5",
     "typescript": "5.2.2"
   }
